# SudokuFAST

./: .travis.yml  CMakeLists.txt  README.md  environment.yml
.github/workflows/: cmake.yml
include/: colors.h  sudoku_solver.h  sudoku_utils.h
resources/: sudoku4a.txt  sudoku9e.txt  sudoku9xa.txt  sudoku9xb.txt
scripts/: interface_test.py
src/: main.cc  main.cpp  sudoku_solver.cpp  sudoku_solver_py.cc  sudoku_solver_py.cpp  sudoku_utils.cc  sudoku_utils.cpp
test/: CMakeLists.txt  sudoku_test.cc  test.cpp
